@@ -242,7 +242,9 @@ if (uint_in_array(CWebUser::$data['type'], [USER_TYPE_ZABBIX_ADMIN, USER_TYPE_SU
 			(new CRow([
 				$media['description'],
 				$media['sendto'],
-				$media['period'],
+				(new CDiv($media['period']))
+					->setAttribute('style', 'max-width: '.ZBX_TEXTAREA_STANDARD_WIDTH.'px;')
+					->addClass(ZBX_STYLE_OVERFLOW_ELLIPSIS),
 				$mediaSeverity,
 				$status,
 				(new CCol(
